# trading-service

./: .dockerignore  .env.sample  .gitignore  BOOTSTRAP.md  CHANGELOG.md  Makefile  PROJECT.md  README.md  cli.py  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 7af358d07c2f_initial_migration_with_contract_first_.py
apps/api/: deps.py  main.py  schemas.py
apps/api/routers/: health.py  orders.py  positions.py
contracts/: openapi.yaml
deploy/: compose.prod.yaml  compose.yaml
deploy/docker/: Dockerfile
docs/: API_CHANGELOG.md  ARCHITECTURE.md  BACKUP_STRATEGY.md  DEVELOPMENT_WORKFLOW.md  DISASTER_RECOVERY.md  MVP.md  PRODUCTION.md  PROGRESS_TRACKER.md  ROADMAP.md  TESTING_STRATEGY.md
docs/decisions/: ADR-001-broker-adapter-pattern.md  ADR-002-async-architecture.md
docs/guides/: CONTRIBUTING.md
docs/issues/: 2025-08-22-nas-disk-usage.md
docs/standups/: 2025-08-22.md
pkg/brokers/: base.py  ccxt_broker.py  dummy.py
pkg/domain/: models.py  repositories.py
pkg/infra/: database.py  log_config.py  logging.py  metrics.py  redis_client.py  settings.py  webhooks.py
pkg/risk/: engine.py
scripts/: backup-dev.sh  backup.sh  cleanup-nas.sh  deploy.sh  health-check.sh  migrate-prod.sh  monitor.sh  nas-backup.sh  restore.sh  setup-nas-scheduler.sh  test-endpoints.sh
secrets/: README.md
tests/: conftest.py  test_api.py  test_dummy_broker.py
tests/e2e/: test_order_lifecycle.py
tests/fixtures/: orders.json
tests/integration/: test_api.py  test_webhook_flow.py
tests/unit/: test_ccxt_broker.py  test_repositories.py  test_risk_engine.py
